kubernetes/toggle-shop.yaml
# Deployment for our application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toggle-shop-deployment
  labels:
    app: toggle-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toggle-shop
  template:
    metadata:
      labels:
        app: toggle-shop
      annotations:
        openfeature.dev/enabled: 'true'
        openfeature.dev/inprocessconfiguration: 'in-process-config'
    spec:
      containers:
        - name: toggle-shop
          image: ghcr.io/open-feature/toggle-shop:v0.2.4 # x-release-please-version
          ports:
            - containerPort: 3000
              name: app-port
---
# Service to expose our application
apiVersion: v1
kind: Service
metadata:
  name: toggle-shop-app-service
  labels:
    app: toggle-shop
spec:
  type: NodePort
  selector:
    app: toggle-shop
  ports:
    - port: 3000
      targetPort: app-port
      nodePort: 30000
---
# Ingress for our application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toggle-shop-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: toggle-shop-app-service
                port:
                  number: 3000
